package com.garepas.garepasapp.enums;

public enum UnidadMedida {
    GRAMO,
    KILOGRAMO,
    MILILITRO,
    LITRO,
    UNIDAD,
    CUCHARADA,
    TAZA
}
